syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.brava.infrastructure.grpc";
option java_outer_classname = "PaymentServiceProto";

package payment;


service PaymentService {
  rpc ProcessPayment (PaymentRequest) returns (PaymentResponse);
}

message PaymentRequest {
  string idempotencyKey = 1;
  string payerId = 2;
  string payeeId = 3;
  double amount = 4;
  string currency = 5;
  string description = 6;
}

message PaymentResponse {
  string transactionId = 1;
  string status = 2;
  string message = 3;
}
